--- a/project1.ioc
+++ b/project1.ioc
@@ -3,17 +3,31 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407ZGT6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IPNb=2
+Mcu.IP2=TIM6
+Mcu.IP3=TIM7
+Mcu.IP4=TIM10
+Mcu.IPNb=5
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PF3
-Mcu.Pin1=PG7
-Mcu.PinsNb=2
+Mcu.Pin0=PE4
+Mcu.Pin1=PE5
+Mcu.Pin10=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin11=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin2=PE6
+Mcu.Pin3=PF2
+Mcu.Pin4=PF3
+Mcu.Pin5=PF6
+Mcu.Pin6=PH0-OSC_IN
+Mcu.Pin7=PH1-OSC_OUT
+Mcu.Pin8=PG6
+Mcu.Pin9=VP_TIM6_VS_ClockSourceINT
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -21,7 +35,9 @@ MxCube.Version=6.7.0
 MxDb.Version=DB.6.0.70
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -30,15 +46,39 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=a_signal
+PE4.Locked=true
+PE4.Signal=GPXTI4
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=b_signal
+PE5.Locked=true
+PE5.Signal=GPIO_Output
+PE6.GPIOParameters=GPIO_Label
+PE6.GPIO_Label=direction
+PE6.Locked=true
+PE6.Signal=GPIO_Output
+PF2.GPIOParameters=GPIO_Label
+PF2.GPIO_Label=DB_KEY
+PF2.Locked=true
+PF2.Signal=GPXTI2
 PF3.GPIOParameters=GPIO_Label
-PF3.GPIO_Label=button
+PF3.GPIO_Label=K_KEY
 PF3.Locked=true
 PF3.Signal=GPXTI3
-PG7.GPIOParameters=GPIO_Label
-PG7.GPIO_Label=pin1
-PG7.Locked=true
-PG7.Signal=GPIO_Output
+PF6.Locked=true
+PF6.Signal=S_TIM10_CH1
+PG6.GPIOParameters=GPIO_Label
+PG6.GPIO_Label=A
+PG6.Locked=true
+PG6.Signal=GPIO_Output
+PH0-OSC_IN.Mode=HSE-External-Oscillator
+PH0-OSC_IN.Signal=RCC_OSC_IN
+PH1-OSC_OUT.Mode=HSE-External-Oscillator
+PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -67,28 +107,62 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.CortexFreq_Value=16000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM10_Init-TIM10-false-HAL-true,4-MX_TIM6_Init-TIM6-false-HAL-true,5-MX_TIM7_Init-TIM7-false-HAL-true
+RCC.48MHZClocksFreq_Value=45000000
+RCC.AHBFreq_Value=90000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=22500000
+RCC.APB1TimFreq_Value=45000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=45000000
+RCC.APB2TimFreq_Value=90000000
+RCC.CortexFreq_Value=90000000
+RCC.EthernetFreq_Value=90000000
+RCC.FCLKCortexFreq_Value=90000000
 RCC.FamilyName=M
-RCC.HSE_VALUE=25000000
+RCC.HCLKFreq_Value=90000000
+RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,FamilyName,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=192000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.PLLCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=48000000
+RCC.MCO2PinFreq_Value=90000000
+RCC.PLLCLKFreq_Value=90000000
+RCC.PLLM=4
+RCC.PLLN=90
+RCC.PLLQCLKFreq_Value=45000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
-RCC.RTCHSEDivFreq_Value=12500000
-RCC.SYSCLKFreq_VALUE=16000000
-RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
-RCC.VcooutputI2S=96000000
+RCC.RTCHSEDivFreq_Value=4000000
+RCC.SYSCLKFreq_VALUE=90000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.VCOI2SOutputFreq_Value=384000000
+RCC.VCOInputFreq_Value=2000000
+RCC.VCOOutputFreq_Value=180000000
+RCC.VcooutputI2S=192000000
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.S_TIM10_CH1.0=TIM10_CH1,PWM Generation1 CH1
+SH.S_TIM10_CH1.ConfNb=1
+TIM10.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM10.Channel=TIM_CHANNEL_1
+TIM10.IPParameters=Channel,AutoReloadPreload
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM6.IPParameters=TIM_MasterOutputTrigger,AutoReloadPreload
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM7.IPParameters=TIM_MasterOutputTrigger,AutoReloadPreload
+TIM7.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
 isbadioc=false
